// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Filters /> Default story renders snapshot 1`] = `
<div
  data-headlessui-state="open"
>
  <button
    aria-controls="headlessui-popover-panel-:r2:"
    aria-expanded="true"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--neutral button button--secondary filters-button"
    data-headlessui-state="open"
    id="headlessui-popover-button-:r0:"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="icon"
      fill="currentColor"
      height="1.5rem"
      style="--icon-size: 1.5rem;"
      viewBox="0 0 24 24"
      width="1.5rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10 18V16H14V18H10ZM3 8V6H21V8H3ZM6 13V11H18V13H6Z"
      />
    </svg>
    Filters
  </button>
  <button
    aria-hidden="true"
    data-headlessui-focus-guard="true"
    id="headlessui-focus-sentinel-:r1:"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
</div>
`;

exports[`<Filters /> OverflowInteractive story renders snapshot 1`] = `
<div
  data-headlessui-state="open"
>
  <button
    aria-controls="headlessui-popover-panel-:rq:"
    aria-expanded="true"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--neutral button button--secondary filters-button"
    data-headlessui-state="open"
    id="headlessui-popover-button-:ro:"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="icon"
      fill="currentColor"
      height="1.5rem"
      style="--icon-size: 1.5rem;"
      viewBox="0 0 24 24"
      width="1.5rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10 18V16H14V18H10ZM3 8V6H21V8H3ZM6 13V11H18V13H6Z"
      />
    </svg>
    Filters
  </button>
  <button
    aria-hidden="true"
    data-headlessui-focus-guard="true"
    id="headlessui-focus-sentinel-:rp:"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
</div>
`;

exports[`<Filters /> WithOnApplyAndCustomButtonGroup story renders snapshot 1`] = `
<div
  data-headlessui-state="open"
>
  <button
    aria-controls="headlessui-popover-panel-:ri:"
    aria-expanded="true"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--neutral button button--secondary filters-button"
    data-headlessui-state="open"
    id="headlessui-popover-button-:rg:"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="icon"
      fill="currentColor"
      height="1.5rem"
      style="--icon-size: 1.5rem;"
      viewBox="0 0 24 24"
      width="1.5rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10 18V16H14V18H10ZM3 8V6H21V8H3ZM6 13V11H18V13H6Z"
      />
    </svg>
    Filters
  </button>
  <button
    aria-hidden="true"
    data-headlessui-focus-guard="true"
    id="headlessui-focus-sentinel-:rh:"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
</div>
`;

exports[`<Filters /> WithOnClear story renders snapshot 1`] = `
<div
  data-headlessui-state="open"
>
  <button
    aria-controls="headlessui-popover-panel-:ra:"
    aria-expanded="true"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--neutral button button--secondary filters-button"
    data-headlessui-state="open"
    id="headlessui-popover-button-:r8:"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="icon"
      fill="currentColor"
      height="1.5rem"
      style="--icon-size: 1.5rem;"
      viewBox="0 0 24 24"
      width="1.5rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10 18V16H14V18H10ZM3 8V6H21V8H3ZM6 13V11H18V13H6Z"
      />
    </svg>
    Filters
  </button>
  <button
    aria-hidden="true"
    data-headlessui-focus-guard="true"
    id="headlessui-focus-sentinel-:r9:"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
</div>
`;
